force-app/main/default/objects/B2B_Order_Reference__c/B2B_Order_Reference__c.object-meta.xml
<CustomObject>
    <label>B2B Order Reference</label>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>B2B Order Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Order References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>