force-app/main/default/objects/B2B_Order_Reference__c/fields/B2B_Order__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order__c</fullName>
    <description>It&apos;s the reference to the according B2B Order.</description>
    <label>B2B Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>B2B Order References</relationshipLabel>
    <relationshipName>B2B_Order_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>