force-app/main/default/objects/B2B_Order_Reference__c/fields/B2B_Order_Reference_Link__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order_Reference_Link__c</fullName>
    <description>Holds the actual link to any Order related document e.g. tracking link.</description>
    <label>B2B Order Reference Link</label>
    <required>true</required>
    <type>Url</type>
</CustomField>