force-app/main/default/objects/B2B_Order_Reference__c/fields/B2B_Order_Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order_Reference_Type__c</fullName>
    <description>Defines the order reference type for the according order reference.</description>
    <label>B2B Order Reference Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>